--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "gist-vim"]
 	path = gist-vim
 	url = git://github.com/mattn/gist-vim.git
+[submodule "mango.vim"]
+	path = mango.vim
+	url = git://github.com/goatslacker/mango.vim.git
+[submodule "simplenote.vim"]
+	path = simplenote.vim
+	url = git://github.com/mrtazz/simplenote.vim.git
