--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule "vim-powerline"]
 	path = vim-powerline
 	url = git://github.com/Lokaltog/vim-powerline.git
-[submodule "gist-vim"]
-	path = gist-vim
-	url = git://github.com/mattn/gist-vim.git
 [submodule "mango.vim"]
 	path = mango.vim
 	url = git://github.com/goatslacker/mango.vim.git
 [submodule "simplenote.vim"]
 	path = simplenote.vim
 	url = git://github.com/mrtazz/simplenote.vim.git
+[submodule "vim-gnupg"]
+	path = vim-gnupg
+	url = git://github.com/jamessan/vim-gnupg.git
